--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -13,6 +13,11 @@
         <div class = "result">
             <h2 id = "Result-Text">Result:</h2>
         </div>  
+        <div class = "score-counter">
+            <h3 id = "YourScore">Your score: 0</h3>
+            <h3 id = "ComputerScore">Computer's score: 0</h3>
+        </div>
+        <div class = "conclusion"></div>
         <script src = "rock_paper_scissors.js"></script> 
         <script>
             let btnRock = document.querySelector('#rock');
